# svsagro

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
core/: apps.py  utils.py  views.py
core/templates/core/: template_base.html
core/templates/registration/: login.html
cthulhu/: urls.py
issues/: admin.py  apps.py  models.py
issues/migrations/: 0001_initial.py  0002_auto_20210802_1958.py
optisort/: admin.py  apps.py  models.py  urls.py  views.py
optisort/files/: sortlist.en.csv  sortlist.es.csv
optisort/migrations/: 0001_initial.py
optisort/templates/optisort/: menu.html  step1.html  step2.html
svs/: admin.py  apps.py  models.py
svs/migrations/: 0001_initial.py  0002_machine_install_date.py  0003_machine_type.py  0004_alter_machine_type.py  0005_alter_machine_type.py  0006_alter_machine_number.py  0007_alter_machine_customer.py
